2004-04-04  Derek Price  <derek@ximbiot.com>

	* filesubr.c (isabsolute): Remove this function.

2004-03-29  Derek Price  <derek@ximbiot.com>

	* README: Note makefiles geenerated with MSVC++ 5.x.

2004-03-28  Derek Price  <derek@ximbiot.com>

	* README: Note MSVC pathing problem when exporting makefiles.

2004-03-26  Derek Price  <derek@ximbiot.com>

	* README: Note build files generated using MSVC 6.0.  Erase uneccessary
	jab at Microsoft's inability to create a portable makefile.

2004-03-25  Derek Price  <derek@ximbiot.com>

	* config.h.in: Define realloc to rpl_realloc to use the version from
	lib/realloc.c.
	* config.h: Regenerated.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* filesubr.c (mkdir_if_needed, xchmod, last_component), run.c
	(piped_child): Comply with new prototypes.

2004-03-11  Derek Price  <derek@ximbiot.com>

	* config.h.in (SIZE_MAX): Define.

2004-02-26  Derek Price  <derek@ximbiot.com>

	* config.h.in: Add definition for inline for GNULIB xalloc module.
	* config.h, stamp-ch: Regenerated.

2003-12-18  Derek Price  <derek@ximbiot.com>

	* config.h, stamp-ch: Regenerated for 1.12.5.1.

2003-12-18  Derek Price  <derek@ximbiot.com>

	* config.h, stamp-ch: Regenerated for release 1.12.5.

2003-12-10  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Include code to put a warning at the beginning of the
	generated config.h that it should not be edited and to edit config.h.in
	instead.
	* Makefile.in, config.h: Regenerated.

2003-12-10  Derek Price  <derek@ximbiot.com>

	* config.h.in (SYSTEM_CLEANUP): That's because you need to change it
	here.
	* config.h: Regenerated.

2003-12-10  Mark D. Baushke  <mdb@cvshome.org>

	* config.h (SYSTEM_CLEANUP): Update macro to be a name
	replacement rather than a macro function. Note: This
	change seems to be undone by 'autoreconf'.

2003-12-10  Mark D. Baushke  <mdb@cvshome.org>

	* config.h (SYSTEM_CLEANUP): Update macro to be a name replacement
	rather than a macro function.