@@ -1,3 +1,7 @@
+2004-04-05  Derek Price  <derek@ximbiot.com>
+
+	* filesubr.c (isabsolute): Remove this function for real.
+
 2004-04-04  Derek Price  <derek@ximbiot.com>
 
 	* filesubr.c (isabsolute): Remove this function.
